# azure-fn-Rust

./: .gitignore  Readme.md  host.json  some  test_function.rest  test_handler.rest
handler/: Cargo.toml
handler/src/: main.rs  types.rs
order/: function.json
