[package]
name = "handler"
version = "0.1.0"
authors = ["iykekings"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"